added cookies popup

--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@
       
       
   </main>
-
-
+  <div id="cookie-banner" style="position: fixed; bottom: 0; left: 0; right: 0; background: #222; color: #fff; padding: 15px; display: none; z-index: 1000;">
+    Ta strona korzysta z plików cookies. <a href="/polityka-prywatnosci.html" style="color: #aaf;">Dowiedz się więcej</a>.
+    <button id="cookie-accept" style="margin-left: 20px;">Akceptuję</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
